# alarm

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  homebridge_api.py  main.py  pyproject.toml  state.json
templates/: index.html
tests/: test_app.py  test_homebridge_api.py
